@@ -10,15 +10,20 @@ import dev.lucavassos.recruiter.modules.job.entities.Job;
 import dev.lucavassos.recruiter.modules.job.repository.JobRepository;
 import dev.lucavassos.recruiter.modules.job.repository.dto.JobDto;
 import dev.lucavassos.recruiter.modules.job.repository.dto.JobDtoMapper;
+import dev.lucavassos.recruiter.modules.question.repository.dto.QuestionDtoMapper;
 import dev.lucavassos.recruiter.modules.skills.Skill;
 import dev.lucavassos.recruiter.modules.skills.repository.SkillRepository;
+import dev.lucavassos.recruiter.modules.skills.repository.dto.SkillDtoMapper;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
+import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
+import java.util.stream.Collectors;
 
 @Service
 public class JobService {
@@ -30,43 +35,47 @@ public class JobService {
     @Autowired
     private SkillRepository skillRepository;
     @Autowired
-    private JobDtoMapper dtoMapper;
+    private JobDtoMapper jobDtoMapper;
+    @Autowired
+    private SkillDtoMapper skillDtoMapper;
+    @Autowired
+    private QuestionDtoMapper questionDtoMapper;
 
     public JobResponse addJob(NewJobRequest request) throws Exception {
         LOG.info("Adding new job");
 
-        List<Skill> skills = skillRepository
-                .findAllById(request.getSkillsIds());
+        Set<Skill> skills = new HashSet<>(skillRepository
+                .findAllById(request.getSkillsIds()));
 
         Job createdJob;
-            try {
-                createdJob = repository.save(
-                        Job.builder()
-                                .client(request.getClient())
-                                .name(request.getName())
-                                .status(request.getStatus())
-                                .wantedCVs(request.getWantedCVs())
-                                .skills(skills)
-                                .experienceRange(request.getExperienceRange())
-                                .noticePeriodInDays(request.getNoticePeriodInDays())
-                                .salaryBudget(request.getSalaryBudget())
-                                .description(request.getDescription())
-                                .bonusPayPerCV(request.getBonusPayPerCV())
-                                .closureBonus(request.getClosureBonus())
-                                .comments(request.getComments())
-                                .build()
-                        );
-            } catch (Exception e) {
-                throw new Exception(e.getCause());
-            }
-
-
-            LOG.info("New job created: [{}]", createdJob);
-
-            return new JobResponse(
-                    createdJob.getId(),
-                    dtoMapper.apply(createdJob)
+        try {
+            createdJob = repository.save(
+                    Job.builder()
+                            .client(request.getClient())
+                            .name(request.getName())
+                            .status(request.getStatus())
+                            .wantedCvs(request.getWantedCVs())
+                            .skills(skills)
+                            .experienceRange(request.getExperienceRange())
+                            .noticePeriodInDays(request.getNoticePeriodInDays())
+                            .salaryBudget(request.getSalaryBudget())
+                            .description(request.getDescription())
+                            .bonusPayPerCv(request.getBonusPayPerCV())
+                            .closureBonus(request.getClosureBonus())
+                            .comments(request.getComments())
+                            .build()
             );
+        } catch (Exception e) {
+            throw new Exception(e.getCause());
+        }
+
+
+        LOG.info("New job created: [{}]", createdJob);
+
+        return new JobResponse(
+                createdJob.getId(),
+                jobDtoMapper.apply(createdJob)
+        );
 
     }
 
@@ -94,8 +103,8 @@ public class JobService {
             job.setStatus(request.getStatus());
             changes = true;
         }
-        if (request.getWantedCVs() != null && !request.getWantedCVs().equals(job.getWantedCVs())) {
-            job.setWantedCVs(request.getWantedCVs());
+        if (request.getWantedCVs() != null && !request.getWantedCVs().equals(job.getWantedCvs())) {
+            job.setWantedCvs(request.getWantedCVs());
             changes = true;
         }
         if (request.getExperienceRange() != null && !request.getExperienceRange().equals(job.getExperienceRange())) {
@@ -114,8 +123,8 @@ public class JobService {
             job.setDescription(request.getDescription());
             changes = true;
         }
-        if (request.getBonusPayPerCV() != null && !request.getBonusPayPerCV().equals(job.getBonusPayPerCV())) {
-            job.setBonusPayPerCV(request.getBonusPayPerCV());
+        if (request.getBonusPayPerCV() != null && !request.getBonusPayPerCV().equals(job.getBonusPayPerCv())) {
+            job.setBonusPayPerCv(request.getBonusPayPerCV());
             changes = true;
         }
         if (request.getClosureBonus() != null && !request.getClosureBonus().equals(job.getClosureBonus())) {
@@ -127,9 +136,9 @@ public class JobService {
             changes = true;
         }
         if (request.getSkillsIds() != null) {
-            List<Skill> skills = skillRepository
-                    .findAllById(request.getSkillsIds());
-            if(!skills.equals(job.getSkills())) {
+            Set<Skill> skills = new HashSet<>(skillRepository
+                    .findAllById(request.getSkillsIds()));
+            if (!skills.equals(job.getSkills())) {
                 job.setSkills(skills);
                 changes = true;
             }
@@ -150,7 +159,7 @@ public class JobService {
 
         return new JobResponse(
                 job.getId(),
-                dtoMapper.apply(job)
+                jobDtoMapper.apply(job)
         );
 
     }
@@ -162,7 +171,7 @@ public class JobService {
                 )
         );
 
-        return dtoMapper.apply(job);
+        return jobDtoMapper.apply(job);
     }
 
     public void changeJobStatus(Long id, JobStatus status) {
@@ -179,11 +188,19 @@ public class JobService {
         repository.save(job);
     }
 
+    @Transactional
     public List<JobDto> getAllJobs() {
-        return repository.findAll()
-                .stream()
-                .filter(job -> job.getStatus() != JobStatus.ARCHIVED)
-                .map(job -> dtoMapper.apply(job))
-                .toList();
+        LOG.info("Retrieving {} jobs", 1000);
+
+        List<JobDto> jobs =
+                repository.findAll()
+                        .stream()
+                        .map(job -> jobDtoMapper.apply(job)
+                        )
+                        .collect(Collectors.toList());
+
+        LOG.info("Jobs retrieved: {}", jobs);
+
+        return jobs;
     }
 }
